[package]
name = "ijson"
version = "0.1.3"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Diggsey/ijson"
description = "A more memory efficient replacement for serde_json::Value"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tracing = ["mockalloc/tracing"]

[dependencies]

[dev-dependencies]
mockalloc = "0.1.2"
ctor = "0.1.16"
rand = "0.8.4"
